--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -29,8 +29,17 @@ file_size_limit = "50MiB"
 
 [auth]
 enabled = true
-site_url = "http://localhost:5173"
-additional_redirect_urls = ["https://localhost:5173"]
+site_url = "https://fastpass.email"
+additional_redirect_urls = [
+  "http://localhost:5173",
+  "https://localhost:5173", 
+  "https://fastpass.email",
+  "https://www.fastpass.email",
+  "https://fastpass.email/dashboard",
+  "https://www.fastpass.email/dashboard",
+  "https://fastpass.email/dashboard?setup=complete",
+  "https://fastpass.email/dashboard?setup=refresh"
+]
 jwt_expiry = 3600
 enable_refresh_token_rotation = true
 refresh_token_reuse_interval = 10
