--- a/vercel.json
+++ b/vercel.json
@@ -17,7 +17,7 @@
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://js.stripe.com https://connect.stripe.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https://*.supabase.co https://*.stripe.com https://api.stripe.com wss://*.supabase.co; frame-src https://connect.stripe.com https://js.stripe.com; object-src 'none'; base-uri 'self';"
+          "value": "default-src 'self' 'unsafe-inline' 'unsafe-eval' *; script-src 'self' 'unsafe-inline' 'unsafe-eval' *; style-src 'self' 'unsafe-inline' *; font-src 'self' *; img-src 'self' data: *; connect-src 'self' *; frame-src *; object-src 'none'; base-uri 'self';"
         },
         {
           "key": "X-Content-Type-Options",
