fix: Enable anonymous access to get-payment-profile function
- Set verify_jwt = false for get-payment-profile in config.toml
- Fix .gitignore to allow supabase directory while blocking binaries
- Resolves 401 authorization errors on payment page for anonymous users

This enables anonymous visitors to load payment details without authentication,
fixing the 'Failed to fetch' errors in the payment flow.

--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,9 @@ dist-ssr
 
 # Supabase CLI binary (contains embedded secrets)
 supabase-bin
-supabase
 supabase-cli*
+# Keep supabase/ directory but exclude binaries in it
+supabase/supabase*
 
 # Other binaries and sensitive files
 *.tar.gz
