--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -63,11 +63,11 @@ enable_confirmations = false
 [functions.create-stripe-payment]
 verify_jwt = false
 
-[functions.capture-stripe-payment] 
-verify_jwt = true
+[functions.capture-stripe-payment]
+verify_jwt = false
 
 [functions.process-escrow-payment]
-verify_jwt = true
+verify_jwt = false
 
 [functions.distribute-escrow-funds]
 verify_jwt = true
