fix: Resolve HTTP 500 error in Postmark webhook by fixing message_responses join
The webhook was failing with HTTP 500 because the message_responses table
used an !inner join, which requires the record to exist. For first-time
responses, no message_responses record exists yet, causing the query to fail.

Changes:
- Changed message_responses!inner to message_responses (left join)
- Updated array access pattern for nullable response data
- Added verify_jwt = false to config for both webhook endpoints

This allows the webhook to properly handle first-time email responses
and successfully insert into email_response_tracking table.

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -99,6 +99,12 @@ verify_jwt = true
 [functions.get-payment-profile]
 verify_jwt = false
 
+[functions.postmark-webhook-public]
+verify_jwt = false
+
+[functions.postmark-inbound-webhook]
+verify_jwt = false
+
 [functions.escrow-health-check]
 verify_jwt = false
 
