--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,17 @@ supabase/supabase*
 *.njsproj
 *.sln
 *.sw?
+
+# Build artifacts that trigger false positive secret alerts
+**/dist/
+**/*.bin
+supabase/.temp/
+supabase/functions/**/dist/
+
+# Protobuf compiled files
+**/*.pb
+**/*.proto.bin
+
+# Test artifacts
+*.test.bin
+**/fixtures/*.bin
