--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,14 @@ supabase/functions/**/dist/
 # Test artifacts
 *.test.bin
 **/fixtures/*.bin
+
+# Claude Code settings
+.claude/
+
+# Database backups
+*.sql
+backup-*.sql
+
+# Windows metadata files (NTFS alternate data streams)
+*:Zone.Identifier
+*:mshield
