feat: add comprehensive file attachment support to payment flow
Features Added:
- Upload up to 5 files per message (10MB each, 50MB total)
- Supported formats: JPG, PNG, GIF, PDF, TXT, DOC, DOCX
- Secure Supabase Storage integration with UUID-based filenames
- Anonymous upload support (no authentication required)
- Attachment links delivered in recipient emails
- Enhanced UI with file icons, remove buttons, and size tracking

Frontend Changes:
- Enhanced FileUploadSection.tsx with 5-file support and improved UI
- Updated PaymentForm.tsx with async file upload before payment
- Updated security.ts with stricter validation (10MB per file, 50MB total)
- Added real-time validation, loading states, and error handling

Backend Changes:
- Created upload-message-attachment Edge Function for secure uploads
- Updated postmark-send-message to include attachment links in emails
- Updated process-escrow-payment to pass attachments through flow
- Added JWT configuration for anonymous uploads

Database:
- Created message-attachments storage bucket with RLS policies
- Support for public access with UUID-based security

Documentation:
- Comprehensive feature guide with architecture details
- Deployment checklist with testing procedures
- Flow diagrams and troubleshooting guides
- Automated deployment and testing scripts

Testing:
- Created test-attachment-upload.sh for automated testing
- Manual test plan with checklist included
- Rollback procedures documented

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -126,3 +126,9 @@ verify_jwt = true
 
 [functions.delete-user-account]
 verify_jwt = true
+
+[functions.upload-message-attachment]
+verify_jwt = false
+
+[functions.postmark-send-message]
+verify_jwt = false
